# homebase

./: .env.example  .gitignore  404.html  BACKLOG.md  CHANGELOG.md  README.md  app.py  check_db.py  cleanup_test_artifacts.ps1  index.html  main.py  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
agents/: index.html  orchestrator.py  subagents.py
agents/analytics/: index.html
agents/chart/: index.html
agents/core/: index.html
agents/rca/: index.html
architecture/: index.html
architecture/data-model/: index.html
backlog/: index.html
changelog/: index.html
data/: homebase.db  homebase_erd.md  registry.json  run_history.json
docs/: backlog.md  changelog.md  index.md  running.md  setup.md
docs/agents/: analytics.md  (+4 more)
graph/: graph.py  state.py
running/: index.html
scripts/: seed_run_history.py
search/: search_index.json
setup/: index.html
tests/: conftest.py  test_analytics_agent.py  test_chart_agent.py  test_completeness_agent.py  test_duplicate_detector.py  test_graph.py  test_hitl.py  test_intake_agent.py  test_llm_providers.py  test_orchestrator.py  test_quadrant_preview.py  test_rca_agent.py  test_registry_tools.py  test_schema_agent.py  test_subagent_tools.py  test_subagents.py  test_update_agent.py  test_whys_agent.py
tools/: analytics_agent.py  chart_agent.py  completeness_agent.py  db.py  duplicate_detector.py  history_tools.py  intake_agent.py  llm_providers.py  llm_tools.py  quadrant_preview.py  rca_agent.py  registry_tools.py  schema_agent.py  subagent_tools.py  tracing.py  update_agent.py  whys_agent.py
(+9 files in other folders)
