[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "homebase"
version = "1.11.0"
description = "HOMEBASE  -  Multi-Agent Home Management System (LangGraph + Groq)"
requires-python = ">=3.11"

dependencies = [
    "langgraph>=1.0.10",
    "langchain-core>=0.3.0",
    "langchain-groq>=0.2.0",
    "plotly>=5.0.0",
    "reportlab>=4.0.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.55.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "graph*", "tools*"]

[tool.pytest.ini_options]
testpaths = ["tests"]